upgrade to java 21