@@ -6,8 +6,9 @@
     <version>1.0-SNAPSHOT</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>20</maven.compiler.source>
-        <maven.compiler.target>20</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
+        <sqlg.version>3.0.3-SNAPSHOT</sqlg.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -84,12 +85,12 @@
         <dependency>
             <groupId>org.umlg</groupId>
             <artifactId>sqlg-c3p0</artifactId>
-            <version>3.0.2-SNAPSHOT</version>
+            <version>${sqlg.version}</version>
         </dependency>
         <dependency>
             <groupId>org.umlg</groupId>
             <artifactId>sqlg-postgres-dialect</artifactId>
-            <version>3.0.2-SNAPSHOT</version>
+            <version>${sqlg.version}</version>
         </dependency>
     </dependencies>
     <build>
@@ -97,11 +98,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
+                <version>3.11.0</version>
                 <configuration>
-                    <release>20</release>
+                    <release>21</release>
                     <compilerArgs>
-                        <arg>--add-modules=jdk.incubator.concurrent</arg>
                         <arg>--enable-preview</arg>
                     </compilerArgs>
                 </configuration>
@@ -109,7 +109,7 @@
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.6</version>
+                <version>0.0.8</version>
                 <executions>
                     <execution>
                         <!-- Default configuration for running -->
